[tool.poetry]
name = "pygnova"
version = "0.1.0"
description = "Batronix-Magnova SCPI Python Helper"
authors = ["Raoul Rubien <rubienr@sbox.tugraz.at>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
zeroconf = "^0.135.0"
psutil = "^6.0.0"
pyusb = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

